--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -59,11 +59,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 13233 total human images.\n",
+      "There are 8351 total dog images.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from glob import glob\n",
