feat: Completed testing the performance of the face_detector function

--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -203,18 +203,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'tqdm'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-fb7491ae5d05>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mtqdm\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mhuman_files_short\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhuman_files\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mdog_files_short\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdog_files\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tqdm'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:19<00:00,  5.06it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Face dectection in first 100 images in human_files : 99.0%\n",
+      "Face dectection in first 100 images in dog_files : 18.0%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -226,8 +237,21 @@
     "\n",
     "#-#-# Do NOT modify the code above this line. #-#-#\n",
     "\n",
-    "## TODO: Test the performance of the face_detector algorithm \n",
-    "## on the images in human_files_short and dog_files_short.\n"
+    "files_size = 100\n",
+    "\n",
+    "human_correct_face_count = 0\n",
+    "dog_correct_face_count = 0\n",
+    "\n",
+    "for i in tqdm(range(files_size)):\n",
+    "    if face_detector(human_files_short[i]):\n",
+    "        human_correct_face_count += 1\n",
+    "    if face_detector(dog_files_short[i]):\n",
+    "        dog_correct_face_count += 1\n",
+    "        \n",
+    "print(\"Face dectection in first 100 images in human_files : {}%\".format(\n",
+    "    (human_correct_face_count / files_size) * 100))\n",
+    "print(\"Face dectection in first 100 images in dog_files : {}%\".format(\n",
+    "    (dog_correct_face_count / files_size) * 100))\n"
    ]
   },
   {
