feat: Implemented dog detector using pre-trained VGG-16 model

--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,14 +203,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:19<00:00,  5.06it/s]"
+      "100%|██████████| 100/100 [00:21<00:00,  4.58it/s]"
      ]
     },
     {
@@ -264,9 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "### (Optional) \n",
@@ -291,9 +289,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -331,10 +329,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from PIL import Image\n",
@@ -356,11 +352,37 @@
     "        Index corresponding to VGG-16 model's prediction\n",
     "    '''\n",
     "    \n",
-    "    ## TODO: Complete the function.\n",
-    "    ## Load and pre-process an image from the given img_path\n",
-    "    ## Return the *index* of the predicted class for that image\n",
+    "    image = Image.open(img_path)\n",
     "    \n",
-    "    return None # predicted class index"
+    "    image_tensor = transforms.Compose([transforms.ToTensor()])(image).unsqueeze(0)\n",
+    "    \n",
+    "    ps = VGG16(image_tensor)\n",
+    "    \n",
+    "    top_p, top_class = ps.topk(1, dim=1)\n",
+    "    \n",
+    "    return top_class.numpy().item(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "252"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img_path = 'dogImages/train/001.Affenpinscher/Affenpinscher_00001.jpg'\n",
+    "\n",
+    "VGG16_predict(img_path)"
    ]
   },
   {
@@ -376,17 +398,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "### returns \"True\" if a dog is detected in the image stored at img_path\n",
     "def dog_detector(img_path):\n",
-    "    ## TODO: Complete the function.\n",
     "    \n",
-    "    return None # true/false"
+    "    predicted_index = VGG16_predict(img_path)\n",
+    "    \n",
+    "    return predicted_index >= 151 & predicted_index <= 268"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img_path = 'dogImages/train/001.Affenpinscher/Affenpinscher_00001.jpg'\n",
+    "\n",
+    "dog_detector(img_path)"
    ]
   },
   {
@@ -410,9 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "### TODO: Test the performance of the dog_detector function\n",
@@ -429,9 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "### (Optional) \n",
@@ -480,9 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -520,9 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torch.nn as nn\n",
@@ -575,9 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torch.optim as optim\n",
@@ -601,9 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# the following import is required for training to be robust to truncated images\n",
@@ -676,9 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def test(loaders, model, criterion, use_cuda):\n",
@@ -734,9 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## TODO: Specify data loaders\n"
@@ -754,9 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torchvision.models as models\n",
@@ -795,9 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "criterion_transfer = None\n",
@@ -816,9 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# train the model\n",
@@ -840,9 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "test(loaders_transfer, model_transfer, criterion_transfer, use_cuda)"
@@ -860,9 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "### TODO: Write a function that takes a path to an image as input\n",
@@ -902,9 +919,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "### TODO: Write your algorithm.\n",
@@ -942,9 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## TODO: Execute your algorithm from Step 6 on\n",
@@ -974,7 +987,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
