feat: Finished testing the performance of dog_detector function

--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -210,7 +210,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:21<00:00,  4.58it/s]"
+      "100%|██████████| 100/100 [00:22<00:00,  4.36it/s]"
      ]
     },
     {
@@ -407,7 +407,7 @@
     "    \n",
     "    predicted_index = VGG16_predict(img_path)\n",
     "    \n",
-    "    return predicted_index >= 151 & predicted_index <= 268"
+    "    return predicted_index >= 151 and predicted_index <= 268"
    ]
   },
   {
@@ -427,7 +427,29 @@
     }
    ],
    "source": [
-    "img_path = 'dogImages/train/001.Affenpinscher/Affenpinscher_00001.jpg'\n",
+    "img_path = dog_files[0]\n",
+    "\n",
+    "dog_detector(img_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img_path = human_files[0]\n",
     "\n",
     "dog_detector(img_path)"
    ]
@@ -452,12 +474,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [09:10<00:00,  5.51s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dog dectection in first 100 images in human_files : 0.0%\n",
+      "Dog dectection in first 100 images in dog_files : 83.0%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "### TODO: Test the performance of the dog_detector function\n",
-    "### on the images in human_files_short and dog_files_short.\n"
+    "from tqdm import tqdm\n",
+    "\n",
+    "human_files_short = human_files[:100]\n",
+    "dog_files_short = dog_files[:100]\n",
+    "\n",
+    "files_size = 100\n",
+    "\n",
+    "human_correct_dog_count = 0\n",
+    "dog_correct_dog_count = 0\n",
+    "\n",
+    "for i in tqdm(range(files_size)):\n",
+    "    if dog_detector(human_files_short[i]):\n",
+    "        human_correct_dog_count += 1\n",
+    "    if dog_detector(dog_files_short[i]):\n",
+    "        dog_correct_dog_count += 1\n",
+    "        \n",
+    "print(\"Dog dectection in first 100 images in human_files : {}%\".format(\n",
+    "    (human_correct_dog_count / files_size) * 100))\n",
+    "print(\"Dog dectection in first 100 images in dog_files : {}%\".format(\n",
+    "    (dog_correct_dog_count / files_size) * 100))\n"
    ]
   },
   {
