refactor: Moved all import statements to the first cell

--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -59,6 +59,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import cv2                \n",
+    "import matplotlib.pyplot as plt  \n",
+    "import torch\n",
+    "import torchvision.models as models\n",
+    "import torchvision.transforms as transforms\n",
+    "import os\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "import torch.optim as optim\n",
+    "\n",
+    "from glob import glob\n",
+    "from tqdm import tqdm\n",
+    "from PIL import Image, ImageFile\n",
+    "from torchvision import datasets\n",
+    "            \n",
+    "%matplotlib inline \n",
+    "\n",
+    "ImageFile.LOAD_TRUNCATED_IMAGES = True"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -72,9 +99,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "from glob import glob\n",
-    "\n",
     "# load filenames for human and dog images\n",
     "human_files = np.array(glob(\"lfw/*/*\"))\n",
     "dog_files = np.array(glob(\"dogImages/*/*/*\"))\n",
@@ -82,6 +106,16 @@
     "# print number of images in each dataset\n",
     "print('There are %d total human images.' % len(human_files))\n",
     "print('There are %d total dog images.' % len(dog_files))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "human_files_short = human_files[:100]\n",
+    "dog_files_short = dog_files[:100]"
    ]
   },
   {
@@ -122,10 +156,6 @@
     }
    ],
    "source": [
-    "import cv2                \n",
-    "import matplotlib.pyplot as plt                        \n",
-    "%matplotlib inline                               \n",
-    "\n",
     "# extract pre-trained face detector\n",
     "face_cascade = cv2.CascadeClassifier('haarcascades/haarcascade_frontalface_alt.xml')\n",
     "\n",
@@ -230,13 +260,6 @@
     }
    ],
    "source": [
-    "from tqdm import tqdm\n",
-    "\n",
-    "human_files_short = human_files[:100]\n",
-    "dog_files_short = dog_files[:100]\n",
-    "\n",
-    "#-#-# Do NOT modify the code above this line. #-#-#\n",
-    "\n",
     "files_size = 100\n",
     "\n",
     "human_correct_face_count = 0\n",
@@ -295,9 +318,6 @@
    },
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import torchvision.models as models\n",
-    "\n",
     "# define VGG16 model\n",
     "VGG16 = models.vgg16(pretrained=True)\n",
     "\n",
@@ -333,13 +353,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from PIL import Image\n",
-    "import torchvision.transforms as transforms\n",
-    "\n",
-    "# Set PIL to be tolerant of image files that are truncated.\n",
-    "from PIL import ImageFile\n",
-    "ImageFile.LOAD_TRUNCATED_IMAGES = True\n",
-    "\n",
     "def VGG16_predict(img_path):\n",
     "    '''\n",
     "    Use pre-trained VGG-16 model to obtain index corresponding to \n",
@@ -501,11 +514,6 @@
     }
    ],
    "source": [
-    "from tqdm import tqdm\n",
-    "\n",
-    "human_files_short = human_files[:100]\n",
-    "dog_files_short = dog_files[:100]\n",
-    "\n",
     "files_size = 100\n",
     "\n",
     "human_correct_dog_count = 0\n",
@@ -585,9 +593,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from torchvision import datasets\n",
-    "\n",
     "### TODO: Write data loaders for training, validation, and test sets\n",
     "## Specify appropriate transforms, and batch_sizes\n"
    ]
@@ -623,9 +628,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "\n",
     "# define the CNN architecture\n",
     "class Net(nn.Module):\n",
     "    ### TODO: choose an architecture, and complete the class\n",
@@ -676,8 +678,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch.optim as optim\n",
-    "\n",
     "### TODO: select loss function\n",
     "criterion_scratch = None\n",
     "\n",
@@ -700,10 +700,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# the following import is required for training to be robust to truncated images\n",
-    "from PIL import ImageFile\n",
-    "ImageFile.LOAD_TRUNCATED_IMAGES = True\n",
-    "\n",
     "def train(n_epochs, loaders, model, optimizer, criterion, use_cuda, save_path):\n",
     "    \"\"\"returns trained model\"\"\"\n",
     "    # initialize tracker for minimum validation loss\n",
@@ -847,9 +843,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torchvision.models as models\n",
-    "import torch.nn as nn\n",
-    "\n",
     "## TODO: Specify model architecture \n",
     "\n",
     "\n",
