fix: Fixed error in getting data loaders

--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,9 +86,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 13233 total human images.\n",
+      "There are 8351 total dog images.\n"
+     ]
+    }
+   ],
    "source": [
     "# load filenames for human and dog images\n",
     "human_files = np.array(glob(\"lfw/*/*\"))\n",
@@ -101,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,6 +130,13 @@
     "def get_data_dir(is_dog):\n",
     "    \n",
     "    data_dir = dog_data_dir if is_dog else human_data_dir\n",
+    "    \n",
+    "    if not is_dog:\n",
+    "        return {\n",
+    "        'train_dir': data_dir,\n",
+    "        'valid_dir': data_dir,\n",
+    "        'test_dir': data_dir\n",
+    "    }\n",
     "    \n",
     "    train_dir = data_dir + '/train'\n",
     "    valid_dir = data_dir + '/valid'\n",
@@ -135,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,6 +201,16 @@
     "        'valid': valid_loader,\n",
     "        'test': test_loader\n",
     "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dog_data_loaders = get_data_loaders(is_dog = True)\n",
+    "human_data_loaders = get_data_loaders(is_dog = False)"
    ]
   },
   {
