--- a/1.ipynb
+++ b/1.ipynb
@@ -8,44 +8,68 @@
     "\n",
     "## Project: Write an Algorithm for a Dog Identification App \n",
     "\n",
-    "---\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* [Step 0](#step0): Import Modules\n",
+    "* [Step 1](#step1): Import & Load Datasets\n",
+    "* [Step 2](#step2): Detect Humans\n",
+    "* [Step 3](#step3): Detect Dogs\n",
+    "* [Step 4](#step4): Create a CNN to Classify Dog Breeds (from Scratch)\n",
+    "* [Step 5](#step5): Create a CNN to Classify Dog Breeds (using Transfer Learning)\n",
+    "* [Step 6](#step6): Write your Algorithm\n",
+    "* [Step 7](#step7): Test Your Algorithm\n",
     "\n",
-    "In this notebook, some template code has already been provided for you, and you will need to implement additional functionality to successfully complete this project. You will not need to modify the included code beyond what is requested. Sections that begin with **'(IMPLEMENTATION)'** in the header indicate that the following block of code will require additional functionality which you must provide. Instructions will be provided for each section, and the specifics of the implementation are marked in the code block with a 'TODO' statement. Please be sure to read the instructions carefully! \n",
-    "\n",
-    "> **Note**: Once you have completed all of the code implementations, you need to finalize your work by exporting the Jupyter Notebook as an HTML document. Before exporting the notebook to html, all of the code cells need to have been run so that reviewers can see the final implementation and output. You can then export the notebook by using the menu above and navigating to **File -> Download as -> HTML (.html)**. Include the finished document along with this notebook as your submission.\n",
-    "\n",
-    "In addition to implementing code, there will be questions that you must answer which relate to the project and your implementation. Each section where you will answer a question is preceded by a **'Question X'** header. Carefully read each question and provide thorough answers in the following text boxes that begin with **'Answer:'**. Your project submission will be evaluated based on your answers to each of the questions and the implementation you provide.\n",
-    "\n",
-    ">**Note:** Code and Markdown cells can be executed using the **Shift + Enter** keyboard shortcut.  Markdown cells can be edited by double-clicking the cell to enter edit mode.\n",
-    "\n",
-    "The rubric contains _optional_ \"Stand Out Suggestions\" for enhancing the project beyond the minimum requirements. If you decide to pursue the \"Stand Out Suggestions\", you should include the code in this Jupyter notebook.\n",
-    "\n",
-    "\n",
-    "\n",
-    "---\n",
-    "### Why We're Here \n",
-    "\n",
-    "In this notebook, you will make the first steps towards developing an algorithm that could be used as part of a mobile or web app.  At the end of this project, your code will accept any user-supplied image as input.  If a dog is detected in the image, it will provide an estimate of the dog's breed.  If a human is detected, it will provide an estimate of the dog breed that is most resembling.  The image below displays potential sample output of your finished project (... but we expect that each student's algorithm will behave differently!). \n",
-    "\n",
-    "![Sample Dog Output](images/sample_dog_output.png)\n",
-    "\n",
-    "In this real-world setting, you will need to piece together a series of models to perform different tasks; for instance, the algorithm that detects humans in an image will be different from the CNN that infers dog breed.  There are many points of possible failure, and no perfect algorithm exists.  Your imperfect solution will nonetheless create a fun user experience!\n",
-    "\n",
-    "### The Road Ahead\n",
-    "\n",
-    "We break the notebook into separate steps.  Feel free to use the links below to navigate the notebook.\n",
-    "\n",
-    "* [Step 0](#step0): Import Datasets\n",
-    "* [Step 1](#step1): Detect Humans\n",
-    "* [Step 2](#step2): Detect Dogs\n",
-    "* [Step 3](#step3): Create a CNN to Classify Dog Breeds (from Scratch)\n",
-    "* [Step 4](#step4): Create a CNN to Classify Dog Breeds (using Transfer Learning)\n",
-    "* [Step 5](#step5): Write your Algorithm\n",
-    "* [Step 6](#step6): Test Your Algorithm\n",
-    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
     "<a id='step0'></a>\n",
-    "## Step 0: Import Datasets\n",
+    "## Step 0: Import Modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import cv2                \n",
+    "import matplotlib.pyplot as plt\n",
+    "import torch\n",
+    "import torchvision.models as models\n",
+    "import torchvision.transforms as transforms\n",
+    "import os\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "from glob import glob\n",
+    "from tqdm import tqdm\n",
+    "from PIL import Image, ImageFile \n",
+    "from torchvision import datasets\n",
+    "                      \n",
+    "%matplotlib inline  \n",
+    "\n",
+    "# Set PIL to be tolerant of image files that are truncated.\n",
+    "ImageFile.LOAD_TRUNCATED_IMAGES = True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "<a id='step1'></a>\n",
+    "## Step 1: Import & Load Datasets\n",
     "\n",
     "Make sure that you've downloaded the required human and dog datasets:\n",
     "* Download the [dog dataset](https://s3-us-west-1.amazonaws.com/udacity-aind/dog-project/dogImages.zip).  Unzip the folder and place it in this project's home directory, at the location `/dogImages`. \n",
@@ -59,45 +83,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import cv2                \n",
-    "import matplotlib.pyplot as plt  \n",
-    "import torch\n",
-    "import torchvision.models as models\n",
-    "import torchvision.transforms as transforms\n",
-    "import os\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "import torch.optim as optim\n",
-    "\n",
-    "from glob import glob\n",
-    "from tqdm import tqdm\n",
-    "from PIL import Image, ImageFile\n",
-    "from torchvision import datasets\n",
-    "            \n",
-    "%matplotlib inline \n",
-    "\n",
-    "ImageFile.LOAD_TRUNCATED_IMAGES = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 13233 total human images.\n",
-      "There are 8351 total dog images.\n"
-     ]
-    }
-   ],
    "source": [
     "# load filenames for human and dog images\n",
     "human_files = np.array(glob(\"lfw/*/*\"))\n",
@@ -109,116 +97,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "human_files_short = human_files[:100]\n",
-    "dog_files_short = dog_files[:100]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dog_data_dir = 'dogImages'\n",
-    "human_data_dir = 'lfw'\n",
-    "\n",
-    "def get_data_dir(is_dog):\n",
-    "    \n",
-    "    data_dir = dog_data_dir if is_dog else human_data_dir\n",
-    "    \n",
-    "    if not is_dog:\n",
-    "        return {\n",
-    "        'train_dir': data_dir,\n",
-    "        'valid_dir': data_dir,\n",
-    "        'test_dir': data_dir\n",
-    "    }\n",
-    "    \n",
-    "    train_dir = data_dir + '/train'\n",
-    "    valid_dir = data_dir + '/valid'\n",
-    "    test_dir = data_dir + '/test'\n",
-    "    \n",
-    "    return {\n",
-    "        'train_dir': train_dir,\n",
-    "        'valid_dir': valid_dir,\n",
-    "        'test_dir': test_dir\n",
-    "    }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "normalize = transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
-    "                                 std=[0.229, 0.224, 0.225])\n",
-    "\n",
-    "train_transforms = transforms.Compose([transforms.Resize(256), \n",
-    "                                       transforms.CenterCrop(224),              \n",
-    "                                       transforms.ToTensor(), \n",
-    "                                       normalize]) \n",
-    "\n",
-    "valid_transforms = transforms.Compose([transforms.Resize(256), \n",
-    "                                       transforms.CenterCrop(224),              \n",
-    "                                       transforms.ToTensor(), \n",
-    "                                       normalize])\n",
-    "\n",
-    "test_transforms = transforms.Compose([transforms.Resize(256), \n",
-    "                                       transforms.CenterCrop(224),              \n",
-    "                                       transforms.ToTensor(), \n",
-    "                                       normalize])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_data_loaders(is_dog):\n",
-    "    \n",
-    "    data_dir_dict = get_data_dir(is_dog)\n",
-    "    \n",
-    "    train_dir = data_dir_dict['train_dir']\n",
-    "    valid_dir = data_dir_dict['valid_dir']\n",
-    "    test_dir = data_dir_dict['test_dir']\n",
-    "    \n",
-    "    train_data = datasets.ImageFolder(train_dir, transform=train_transforms)\n",
-    "    valid_data = datasets.ImageFolder(valid_dir, transform=valid_transforms)\n",
-    "    test_data = datasets.ImageFolder(test_dir, transform=test_transforms)\n",
-    "\n",
-    "    train_loader = torch.utils.data.DataLoader(train_data, batch_size=32)\n",
-    "    valid_loader = torch.utils.data.DataLoader(valid_data, batch_size=32)\n",
-    "    test_loader = torch.utils.data.DataLoader(test_data, batch_size=32)\n",
-    "    \n",
-    "    return {\n",
-    "        'train': train_loader,\n",
-    "        'valid': valid_loader,\n",
-    "        'test': test_loader\n",
-    "    }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dog_data_loaders = get_data_loaders(is_dog = True)\n",
-    "human_data_loaders = get_data_loaders(is_dog = False)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='step1'></a>\n",
-    "## Step 1: Detect Humans\n",
+    "<a id='step2'></a>\n",
+    "## Step 2: Detect Humans\n",
     "\n",
     "In this section, we use OpenCV's implementation of [Haar feature-based cascade classifiers](http://docs.opencv.org/trunk/d7/d8b/tutorial_py_face_detection.html) to detect human faces in images.  \n",
     "\n",
@@ -312,21 +195,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files_size = 100\n",
+    "human_files_short = human_files[:100]\n",
+    "dog_files_short = dog_files[:100]\n",
     "\n",
-    "human_correct_face_count = 0\n",
-    "dog_correct_face_count = 0\n",
+    "#-#-# Do NOT modify the code above this line. #-#-#\n",
     "\n",
-    "for i in tqdm(range(files_size)):\n",
-    "    if face_detector(human_files_short[i]):\n",
-    "        human_correct_face_count += 1\n",
-    "    if face_detector(dog_files_short[i]):\n",
-    "        dog_correct_face_count += 1\n",
-    "        \n",
-    "print(\"Face dectection in first 100 images in human_files : {}%\".format(\n",
-    "    (human_correct_face_count / files_size) * 100))\n",
-    "print(\"Face dectection in first 100 images in dog_files : {}%\".format(\n",
-    "    (dog_correct_face_count / files_size) * 100))\n"
+    "## TODO: Test the performance of the face_detector algorithm \n",
+    "## on the images in human_files_short and dog_files_short.\n"
    ]
   },
   {
@@ -352,8 +227,8 @@
    "metadata": {},
    "source": [
     "---\n",
-    "<a id='step2'></a>\n",
-    "## Step 2: Detect Dogs\n",
+    "<a id='step3'></a>\n",
+    "## Step 3: Detect Dogs\n",
     "\n",
     "In this section, we use a [pre-trained model](http://pytorch.org/docs/master/torchvision/models.html) to detect dogs in images.  \n",
     "\n",
@@ -365,9 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# define VGG16 model\n",
@@ -417,15 +290,11 @@
     "        Index corresponding to VGG-16 model's prediction\n",
     "    '''\n",
     "    \n",
-    "    image = Image.open(img_path)\n",
+    "    ## TODO: Complete the function.\n",
+    "    ## Load and pre-process an image from the given img_path\n",
+    "    ## Return the *index* of the predicted class for that image\n",
     "    \n",
-    "    image_tensor = transforms.Compose([transforms.ToTensor()])(image).unsqueeze(0)\n",
-    "    \n",
-    "    ps = VGG16(image_tensor)\n",
-    "    \n",
-    "    top_p, top_class = ps.topk(1, dim=1)\n",
-    "    \n",
-    "    return top_class.numpy().item(0)"
+    "    return None # predicted class index"
    ]
   },
   {
@@ -447,10 +316,9 @@
    "source": [
     "### returns \"True\" if a dog is detected in the image stored at img_path\n",
     "def dog_detector(img_path):\n",
+    "    ## TODO: Complete the function.\n",
     "    \n",
-    "    predicted_index = VGG16_predict(img_path)\n",
-    "    \n",
-    "    return predicted_index >= 151 and predicted_index <= 268"
+    "    return None # true/false"
    ]
   },
   {
@@ -477,23 +345,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "files_size = 100\n",
-    "\n",
-    "human_correct_dog_count = 0\n",
-    "dog_correct_dog_count = 0\n",
-    "\n",
-    "for i in tqdm(range(files_size)):\n",
-    "    if dog_detector(human_files_short[i]):\n",
-    "        human_correct_dog_count += 1\n",
-    "    if dog_detector(dog_files_short[i]):\n",
-    "        dog_correct_dog_count += 1\n",
-    "        \n",
-    "print(\"Dog dectection in first 100 images in human_files : {}%\".format(\n",
-    "    (human_correct_dog_count / files_size) * 100))\n",
-    "print(\"Dog dectection in first 100 images in dog_files : {}%\".format(\n",
-    "    (dog_correct_dog_count / files_size) * 100))\n"
+    "### TODO: Test the performance of the dog_detector function\n",
+    "### on the images in human_files_short and dog_files_short.\n"
    ]
   },
   {
@@ -519,8 +372,8 @@
    "metadata": {},
    "source": [
     "---\n",
-    "<a id='step3'></a>\n",
-    "## Step 3: Create a CNN to Classify Dog Breeds (from Scratch)\n",
+    "<a id='step4'></a>\n",
+    "## Step 4: Create a CNN to Classify Dog Breeds (from Scratch)\n",
     "\n",
     "Now that we have functions for detecting humans and dogs in images, we need a way to predict breed from images.  In this step, you will create a CNN that classifies dog breeds.  You must create your CNN _from scratch_ (so, you can't use transfer learning _yet_!), and you must attain a test accuracy of at least 10%.  In Step 4 of this notebook, you will have the opportunity to use transfer learning to create a CNN that attains greatly improved accuracy.\n",
     "\n",
@@ -643,6 +496,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import torch.optim as optim\n",
+    "\n",
     "### TODO: select loss function\n",
     "criterion_scratch = None\n",
     "\n",
@@ -665,6 +520,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# the following import is required for training to be robust to truncated images\n",
+    "from PIL import ImageFile\n",
+    "ImageFile.LOAD_TRUNCATED_IMAGES = True\n",
+    "\n",
     "def train(n_epochs, loaders, model, optimizer, criterion, use_cuda, save_path):\n",
     "    \"\"\"returns trained model\"\"\"\n",
     "    # initialize tracker for minimum validation loss\n",
@@ -772,8 +631,8 @@
    "metadata": {},
    "source": [
     "---\n",
-    "<a id='step4'></a>\n",
-    "## Step 4: Create a CNN to Classify Dog Breeds (using Transfer Learning)\n",
+    "<a id='step5'></a>\n",
+    "## Step 5: Create a CNN to Classify Dog Breeds (using Transfer Learning)\n",
     "\n",
     "You will now use transfer learning to create a CNN that can identify dog breed from images.  Your CNN must attain at least 60% accuracy on the test set.\n",
     "\n",
@@ -808,6 +667,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import torchvision.models as models\n",
+    "import torch.nn as nn\n",
+    "\n",
     "## TODO: Specify model architecture \n",
     "\n",
     "\n",
@@ -919,8 +781,8 @@
    "metadata": {},
    "source": [
     "---\n",
-    "<a id='step5'></a>\n",
-    "## Step 5: Write your Algorithm\n",
+    "<a id='step6'></a>\n",
+    "## Step 6: Write your Algorithm\n",
     "\n",
     "Write an algorithm that accepts a file path to an image and first determines whether the image contains a human, dog, or neither.  Then,\n",
     "- if a __dog__ is detected in the image, return the predicted breed.\n",
@@ -956,8 +818,8 @@
    "metadata": {},
    "source": [
     "---\n",
-    "<a id='step6'></a>\n",
-    "## Step 6: Test Your Algorithm\n",
+    "<a id='step7'></a>\n",
+    "## Step 7: Test Your Algorithm\n",
     "\n",
     "In this section, you will take your new algorithm for a spin!  What kind of dog does the algorithm think that _you_ look like?  If you have a dog, does it predict your dog's breed accurately?  If you have a cat, does it mistakenly think that your cat is a dog?\n",
     "\n",
