*:tested existing CNN models (1)

--- a/lab/TorchVision Models.ipynb
+++ b/lab/TorchVision Models.ipynb
@@ -1,12 +1,47 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TorchVision Models"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torchvision.models as models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--- \n",
+    "\n",
+    "* [resnet18](#resnet18): resnet18\n",
+    "* [alexnet](#alexnet): alexnet\n",
+    "* [vgg16](#vgg16): vgg16\n",
+    "* [squeezenet](#squeezenet): squeezenet\n",
+    "* [densenet](#densenet): densenet\n",
+    "* [googlenet](#googlenet): googlenet\n",
+    "* [shufflenet](#shufflenet): shufflenet\n",
+    "* [mobilenet](#mobilenet): mobilenet\n",
+    "* [resnext50_32x4d](#resnext50_32x4d): resnext50_32x4d\n",
+    "* [wide_resnet50_2](#wide_resnet50_2): wide_resnet50_2\n",
+    "* [mnasnet](#mnasnet): mnasnet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "<a id='resnet18'></a>\n",
+    "## resnet18"
    ]
   },
   {
@@ -114,6 +149,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "<a id='alexnet'></a>\n",
+    "## alexnet"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -158,6 +202,15 @@
    "source": [
     "alexnet = models.alexnet(pretrained=True)\n",
     "alexnet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "<a id='vgg16'></a>\n",
+    "## vgg16"
    ]
   },
   {
@@ -226,8 +279,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "<a id='squeezenet'></a>\n",
+    "## squeezenet"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +376,7 @@
        ")"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,6 +384,15 @@
    "source": [
     "squeezenet = models.squeezenet1_0(pretrained=True)\n",
     "squeezenet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "<a id='densenet'></a>\n",
+    "## densenet"
    ]
   },
   {
@@ -1005,6 +1076,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "<a id='googlenet'></a>\n",
+    "## googlenet"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -1345,6 +1425,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "<a id='shufflenet'></a>\n",
+    "## shufflenet"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -1608,6 +1697,15 @@
    "source": [
     "shufflenet = models.shufflenet_v2_x1_0(pretrained=True)\n",
     "shufflenet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "<a id='mobilenet'></a>\n",
+    "## mobilenet"
    ]
   },
   {
@@ -1916,6 +2014,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "<a id='resnext50_32x4d'></a>\n",
+    "## resnext50_32x4d"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -2112,6 +2219,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "<a id='wide_resnet50_2'></a>\n",
+    "## wide_resnet50_2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -2305,6 +2421,15 @@
    "source": [
     "wide_resnet50_2 = models.wide_resnet50_2(pretrained=True)\n",
     "wide_resnet50_2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "<a id='mnasnet'></a>\n",
+    "## mnasnet"
    ]
   },
   {
