feat: Image preprocessing

--- a/lab/0/1.ipynb
+++ b/lab/0/1.ipynb
@@ -6,15 +6,15 @@
    "source": [
     "# Convolutional Neural Networks\n",
     "\n",
-    "## Project: Write an Algorithm for a Dog Identification App \n",
-    "\n",
-    "---"
+    "## Project: Write an Algorithm for a Dog Identification App "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
     "* [Step 0](#step0): Import Modules\n",
     "* [Step 1](#step1): Import & Load Datasets\n",
     "* [Step 2](#step2): Detect Humans\n",
@@ -22,9 +22,7 @@
     "* [Step 4](#step4): Create a CNN to Classify Dog Breeds (from Scratch)\n",
     "* [Step 5](#step5): Create a CNN to Classify Dog Breeds (using Transfer Learning)\n",
     "* [Step 6](#step6): Write your Algorithm\n",
-    "* [Step 7](#step7): Test Your Algorithm\n",
-    "\n",
-    "---"
+    "* [Step 7](#step7): Test Your Algorithm"
    ]
   },
   {
@@ -38,9 +36,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import cv2                \n",
@@ -51,11 +57,13 @@
     "import os\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
+    "import json\n",
     "\n",
     "from glob import glob\n",
     "from tqdm import tqdm\n",
     "from PIL import Image, ImageFile \n",
     "from torchvision import datasets\n",
+    "from keras.utils import np_utils\n",
     "                      \n",
     "%matplotlib inline  \n",
     "\n",
@@ -83,9 +91,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 13233 total human images.\n",
+      "There are 8351 total dog images.\n"
+     ]
+    }
+   ],
    "source": [
     "# load filenames for human and dog images\n",
     "human_files = np.array(glob(\"lfw/*/*\"))\n",
@@ -94,6 +111,80 @@
     "# print number of images in each dataset\n",
     "print('There are %d total human images.' % len(human_files))\n",
     "print('There are %d total dog images.' % len(dog_files))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_target_by_filename(filename):\n",
+    "        \n",
+    "        file_name_arr = filename.split('/')\n",
+    "        \n",
+    "        return int(file_name_arr[2].split('.')[0])\n",
+    "    \n",
+    "def get_targets_by_filenames(filesnames):\n",
+    "    return [get_target_by_filename(filename) for filename in filesnames]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_files(path):\n",
+    "    \n",
+    "    filenames = np.array(glob(f'{path}/*/*'))\n",
+    "    \n",
+    "    return {\n",
+    "        'filenames': filenames,\n",
+    "        'target': get_targets_by_filenames(filenames)\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 133 total dog categories.\n",
+      "There are 8351 total dog images.\n",
+      "\n",
+      "There are 6680 training dog images.\n",
+      "There are 835 validation dog images.\n",
+      "There are 836 test dog images.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def load_dataset(path):\n",
+    "    \n",
+    "    data = load_files(path)\n",
+    "    dog_files = np.array(data['filenames'])\n",
+    "    dog_targets = np_utils.to_categorical(np.array(data['target']))#, 133)\n",
+    "    \n",
+    "    return dog_files, dog_targets\n",
+    "\n",
+    "# load train, test, and validation datasets\n",
+    "train_files, train_targets = load_dataset('dogImages/train')\n",
+    "valid_files, valid_targets = load_dataset('dogImages/valid')\n",
+    "test_files, test_targets = load_dataset('dogImages/test')\n",
+    "# load list of dog names\n",
+    "# the [20:-1] portion simply removes the filepath and folder number\n",
+    "dog_names = [item[20:-1] for item in sorted(glob(\"dogImages/train/*/\"))]\n",
+    "# print statistics about the dataset\n",
+    "print('There are %d total dog categories.' % len(dog_names))\n",
+    "print('There are %s total dog images.\\n' % len(np.hstack([train_files, valid_files, test_files])))\n",
+    "print('There are %d training dog images.' % len(train_files))\n",
+    "print('There are %d validation dog images.' % len(valid_files))\n",
+    "print('There are %d test dog images.'% len(test_files))"
    ]
   },
   {
@@ -200,8 +291,23 @@
     "\n",
     "#-#-# Do NOT modify the code above this line. #-#-#\n",
     "\n",
-    "## TODO: Test the performance of the face_detector algorithm \n",
-    "## on the images in human_files_short and dog_files_short.\n"
+    "files_size = 100\n",
+    "\n",
+    "human_correct_face_count = 0\n",
+    "dog_correct_face_count = 0\n",
+    "\n",
+    "for i in tqdm(range(files_size)):\n",
+    "    if face_detector(human_files_short[i]):\n",
+    "        human_correct_face_count += 1\n",
+    "        \n",
+    "for i in tqdm(range(files_size)):\n",
+    "    if face_detector(dog_files_short[i]):\n",
+    "        dog_correct_face_count += 1\n",
+    "        \n",
+    "print(\"Face dectection in first 100 images in human_files : {}%\".format(\n",
+    "    (human_correct_face_count / files_size) * 100))\n",
+    "print(\"Face dectection in first 100 images in dog_files : {}%\".format(\n",
+    "    (dog_correct_face_count / files_size) * 100))\n"
    ]
   },
   {
@@ -290,11 +396,15 @@
     "        Index corresponding to VGG-16 model's prediction\n",
     "    '''\n",
     "    \n",
-    "    ## TODO: Complete the function.\n",
-    "    ## Load and pre-process an image from the given img_path\n",
-    "    ## Return the *index* of the predicted class for that image\n",
+    "    image = Image.open(img_path)\n",
     "    \n",
-    "    return None # predicted class index"
+    "    image_tensor = transforms.Compose([transforms.ToTensor()])(image).unsqueeze(0)\n",
+    "    \n",
+    "    ps = VGG16(image_tensor)\n",
+    "    \n",
+    "    top_p, top_class = ps.topk(1, dim=1)\n",
+    "    \n",
+    "    return top_class.numpy().item(0)"
    ]
   },
   {
@@ -316,9 +426,10 @@
    "source": [
     "### returns \"True\" if a dog is detected in the image stored at img_path\n",
     "def dog_detector(img_path):\n",
-    "    ## TODO: Complete the function.\n",
     "    \n",
-    "    return None # true/false"
+    "    predicted_index = VGG16_predict(img_path)\n",
+    "    \n",
+    "    return predicted_index >= 151 and predicted_index <= 268"
    ]
   },
   {
@@ -345,8 +456,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### TODO: Test the performance of the dog_detector function\n",
-    "### on the images in human_files_short and dog_files_short.\n"
+    "files_size = 100\n",
+    "\n",
+    "human_correct_dog_count = 0\n",
+    "dog_correct_dog_count = 0\n",
+    "\n",
+    "for i in tqdm(range(files_size)):\n",
+    "    if dog_detector(human_files_short[i]):\n",
+    "        human_correct_dog_count += 1\n",
+    "        \n",
+    "for i in tqdm(range(files_size)):\n",
+    "    if dog_detector(dog_files_short[i]):\n",
+    "        dog_correct_dog_count += 1\n",
+    "        \n",
+    "print(\"Dog dectection in first 100 images in human_files : {}%\".format(\n",
+    "    (human_correct_dog_count / files_size) * 100))\n",
+    "print(\"Dog dectection in first 100 images in dog_files : {}%\".format(\n",
+    "    (dog_correct_dog_count / files_size) * 100))\n"
    ]
   },
   {
@@ -406,13 +532,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### TODO: Write data loaders for training, validation, and test sets\n",
-    "## Specify appropriate transforms, and batch_sizes\n"
+    "See [Step 1](#step1): Import & Load Datasets"
    ]
   },
   {
