--- a/dog-app-I.ipynb
+++ b/dog-app-I.ipynb
@@ -135,8 +135,8 @@
    ],
    "source": [
     "# load filenames for human and dog images\n",
-    "human_files = np.array(glob(\"../lfw/*/*\"))\n",
-    "dog_files = np.array(glob(\"../dogImages/*/*/*\"))\n",
+    "human_files = np.array(glob(\"./lfw/*/*\"))\n",
+    "dog_files = np.array(glob(\"./dogImages/*/*/*\"))\n",
     "\n",
     "# print number of images in each dataset\n",
     "print('There are %d total human images.' % len(human_files))\n",
@@ -153,8 +153,8 @@
    },
    "outputs": [],
    "source": [
-    "dog_data_dir = '../dogImages'\n",
-    "human_data_dir = '../lfw'\n",
+    "dog_data_dir = './dogImages'\n",
+    "human_data_dir = './lfw'\n",
     "\n",
     "def get_data_dir(is_dog):\n",
     "    \n",
@@ -276,7 +276,7 @@
    ],
    "source": [
     "# extract pre-trained face detector\n",
-    "face_cascade = cv2.CascadeClassifier('../haarcascades/haarcascade_frontalface_alt.xml')\n",
+    "face_cascade = cv2.CascadeClassifier('./haarcascades/haarcascade_frontalface_alt.xml')\n",
     "\n",
     "# load color (BGR) image\n",
     "img = cv2.imread(human_files[0])\n",
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 18,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -365,13 +365,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 19,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "xbK_a1U0CATo"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:03<00:00, 25.46it/s]\n",
+      "100%|██████████| 100/100 [00:17<00:00,  5.70it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Face dectection in first 100 images in human_files : 99.0%\n",
+      "Face dectection in first 100 images in dog_files : 18.0%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "human_files_short = human_files[:100]\n",
     "dog_files_short = dog_files[:100]\n",
@@ -442,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 20,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -487,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 21,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -534,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 22,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -576,13 +600,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 23,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "CN4Vt3saCAUH"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [01:06<00:00,  1.51it/s]\n",
+      "100%|██████████| 100/100 [08:07<00:00,  4.88s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dog dectection in first 100 images in human_files : 0.0%\n",
+      "Dog dectection in first 100 images in dog_files : 88.0%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "files_size = 100\n",
     "\n",
