--- a/dog-app-I.ipynb
+++ b/dog-app-I.ipynb
@@ -759,7 +759,16 @@
     "id": "Rm9oFZmbCAUb"
    },
    "source": [
-    "**Answer**:"
+    "**Answer**:\n",
+    "\n",
+    "* My code resizes the images by\n",
+    "    * cropping the given PIL Image and resizing it to 224px\n",
+    "* Yes\n",
+    "    * randomly changing the brightness, contrast and saturation of an image\n",
+    "    * horizontally flipping the given PIL Image randomly with a given probability\n",
+    "    * performing perspective transformation of the given PIL Image randomly with a given probability\n",
+    "    * vertically flipping the given PIL Image randomly with a given probability\n",
+    "    * rotating the image by angle ranging from -90 to 90"
    ]
   },
   {
@@ -887,7 +896,10 @@
     "id": "i_jMkKjhCAUk"
    },
    "source": [
-    "__Answer:__ "
+    "__Answer:__ \n",
+    "\n",
+    "1. Created 3 convolutional layers and 2 fully connected layers\n",
+    "2. Added batch normalization as it enables faster and more stable training of deep neural networks"
    ]
   },
   {
