--- a/dog-app-I.ipynb
+++ b/dog-app-I.ipynb
@@ -899,7 +899,8 @@
     "__Answer:__ \n",
     "\n",
     "1. Created 3 convolutional layers and 2 fully connected layers\n",
-    "2. Added batch normalization as it enables faster and more stable training of deep neural networks"
+    "2. Added batch normalization as it enables faster and more stable training of deep neural networks\n",
+    "3. Added dropout as it avoids overfitting"
    ]
   },
   {
